Update Utils.java